src/objects/gaichu__c.object
<CustomObject>
    <description>インターブレインズ用</description>
    <fields>
        <fullName>FAX__c</fullName>
        <label>FAX</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>TEL__c</fullName>
        <label>TEL</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>address1__c</fullName>
        <label>住所1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>address2__c</fullName>
        <label>住所2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ginkou__c</fullName>
        <label>銀行名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gyousyu__c</fullName>
        <label>業種</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>houjikojin__c</fullName>
        <label>法人/個人</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>法人</fullName>
                    <default>true</default>
                    <label>法人</label>
                </value>
                <value>
                    <fullName>個人</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kouzabangou__c</fullName>
        <label>口座番号</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mail__c</fullName>
        <label>電子メール</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>meigi__c</fullName>
        <label>口座名義</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>postalcode__c</fullName>
        <label>郵便番号</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>siharaibi__c</fullName>
        <label>支払日</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>siharaihouhou__c</fullName>
        <label>支払方法</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>振込</fullName>
                </value>
                <value>
                    <fullName>小切手</fullName>
                </value>
                <value>
                    <fullName>手形(105日)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>siharaisaikule__c</fullName>
        <label>支払サイクル</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>翌々月</fullName>
                </value>
                <value>
                    <fullName>翌々々月</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>simebi__c</fullName>
        <defaultValue>&quot;末日&quot;</defaultValue>
        <label>締日</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>site__c</fullName>
        <label>サイト</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sitenmei__c</fullName>
        <label>支店名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>状況</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>未申請</fullName>
                </value>
                <value>
                    <fullName>申請中</fullName>
                </value>
                <value>
                    <fullName>承認</fullName>
                </value>
                <value>
                    <fullName>却下</fullName>
                </value>
                <value>
                    <fullName>取消</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>syanaigai__c</fullName>
        <label>社内/社外</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>社内</fullName>
                </value>
                <value>
                    <fullName>社外</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tanto_busyo__c</fullName>
        <label>担当者部署</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tanto_name__c</fullName>
        <label>担当者名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>yakusyoku__c</fullName>
        <label>担当者役職</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>yokinsyubetu__c</fullName>
        <label>預金種別</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>普通預金</fullName>
                </value>
                <value>
                    <fullName>当座預金</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>登録外注</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <listViews>
        <fullName>GroupMail_gaichu</fullName>
        <filterScope>Queue</filterScope>
        <label>メールテスト</label>
        <queue>GroupMail</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>社名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>